--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,13 @@
+.found-notes {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 10px;
+  align-items: center;
+  font-size: 20px;
+}
 
+.found-notes-title {
+  font-weight: 700;
+  font-size: 24px;
+}
